--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Sample</title>
   </head>
   <body>
+    <div id="reset">
+      <p>Reset the Grid!</p>
+    </div>
     <div id="main">
     </div>
   </body>
